tests/NormalTests/paczka1/fuzzy1/58477624.err
Error in line 1: S68 S68 53,6
Error in line 2: S68 S575 47,7
Error in line 11: Q8lx S68 26,0
Error in line 30: Q8lx S457 111,87
Error in line 31: JCrVFTG5r S68 60,01
Error in line 29: JCrVFTG5r S575 9,2
Error in line 20: Q8lx S457 42,8
Error in line 33: JCrVFTG5r S68 174,3
